WhatsappAPI.java - Changed some methods